# Mandelbrotset

./: .gitignore  CMakeLists.txt  README.md
shader/: shader.frag
src/: main.cpp
